[metadata]
name = aioprox
version = 0.1.5
author = JordanAllen101
author_email = JordanAllen101@autistici.org
description = Async Python proxy manager with latency testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JordanAllen101/AioProx
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp
    aiohttp-socks
include_package_data = True

